# pyramid-fullstack

./: LICENSE  README.md
services/doc/: pyproject.toml
services/doc/doc/guide/: mkdocs.yml
services/doc/tests/: test_doc.py
