[tool.poetry]
name = "doc"
version = "0.1.0"
description = ""
authors = ["lorenzo.alvarez <lorenzo.alvarezlorenzo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^8.2.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
